@@ -12,6 +12,7 @@ Open Vehicle Monitor System v3 - Change log
                            wifi state to control driver mode changes. Improvements to wifi
                            stability and compatibility.
                          - Twizy v0.13: kickdown implementation, throttle display
+                         - Provide a 'test watchdog' command to test watchdog timers
 
 2018-03-21 MWJ  3.1.000  OTA release
                          - Tesla Model S basic vehicle support
